// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClayButton renders in expyrico 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "#FAFAF8",
      "flex": 1,
      "opacity": 1,
    }
  }
>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      accessibilityLabel="Save"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#F5A623",
          "borderRadius": 22,
          "justifyContent": "center",
          "minHeight": 48,
          "paddingHorizontal": 24,
          "paddingVertical": 12,
          "shadowColor": "rgba(44,44,40,0.10)",
          "shadowOffset": {
            "height": 6,
            "width": 0,
          },
          "shadowOpacity": 1,
          "shadowRadius": 16,
          "transform": [
            {
              "translateY": 0,
            },
          ],
        }
      }
    >
      <Text
        style={
          {
            "color": "#2C2C28",
            "fontSize": 14,
            "fontWeight": "700",
            "includeFontPadding": false,
            "lineHeight": 20,
            "textAlign": "center",
            "textAlignVertical": "center",
          }
        }
      >
        Save
      </Text>
    </View>
  </View>
</View>
`;

exports[`ClayButton renders in expyricoDark 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "#111512",
      "flex": 1,
      "opacity": 0,
    }
  }
>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      accessibilityLabel="Save"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#F5A623",
          "borderRadius": 22,
          "justifyContent": "center",
          "minHeight": 48,
          "paddingHorizontal": 24,
          "paddingVertical": 12,
          "shadowColor": "rgba(0,0,0,0.34)",
          "shadowOffset": {
            "height": 8,
            "width": 0,
          },
          "shadowOpacity": 1,
          "shadowRadius": 20,
          "transform": [
            {
              "translateY": 0,
            },
          ],
        }
      }
    >
      <Text
        style={
          {
            "color": "#2C2C28",
            "fontSize": 14,
            "fontWeight": "700",
            "includeFontPadding": false,
            "lineHeight": 20,
            "textAlign": "center",
            "textAlignVertical": "center",
          }
        }
      >
        Save
      </Text>
    </View>
  </View>
</View>
`;
